<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="homework">Home Work</string>
    <string name="show">Show Attendance</string>
    <string name="mark">Mark Attendance</string>
    <string name="marks">Mark\nAttendance</string>
    <string name="gellery">Gellery</string>
    <string name="notic">Notic</string>
    <string name="pay">Pay Fee</string>
    <string name="about">About</string>
    <string name="home">Home\nWork</string>
    <string name="markattandance">Mark Attandance</string>
    <string name="showattandance">Show Attandance</string>
    <string name="notice">Notice</string>
    <string name="gallary">Gallary</string>
    <string name="payfee">Pay\nFee</string>
</resources>