<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/tvblue"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="#0968D5"
        android:textSize="30sp"
        />
    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/ak_image"
        android:layout_margin="15dp"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/tvgreen"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:background="#FF8F00"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/tvpink"
        android:layout_centerVertical="true"
        android:layout_below="@+id/image1"
        />

    <TextView
        android:id="@+id/tvpink"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:background="#AD1457"
        android:layout_centerInParent="true"
        android:layout_below="@+id/image1"
        />

    <TextView
        android:id="@+id/tvyellow"
        android:layout_width="90dp"
        android:layout_height="150dp"
        android:background="#9E9D24"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/image1"
        android:layout_toEndOf="@+id/tvpink"
        />

    <ImageView
        android:id="@+id/image2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_1"
        android:layout_centerInParent="true"
        android:layout_below="@id/image1"
        android:layout_toStartOf="@+id/tvpink"
        android:layout_marginEnd="30dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marks"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_below="@+id/image2"
        android:layout_marginStart="15sp"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_2"
        android:layout_centerInParent="true"
        android:layout_below="@id/image1"
        android:layout_marginEnd="30dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shows"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_below="@+id/image3"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/image4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/image_3"
        android:layout_marginEnd="30dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/image1"
        android:layout_toEndOf="@+id/tvpink"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/image4"
        android:layout_toEndOf="@+id/tvpink"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/tvgellery"
        android:layout_width="150dp"
        android:padding="@dimen/dp_10"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:layout_below="@+id/tvyellow"
        android:background="#E1BEE7"
        android:text="@string/gellery"
        android:drawableRight="@drawable/gellery_pic"
        android:textSize="20sp"
        android:drawablePadding="@dimen/dp_10"
        android:textColor="#C51162"
        android:layout_marginStart="10dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvnotic"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:background="#C8E6C9"
        android:layout_below="@+id/tvgreen"
        android:layout_toEndOf="@+id/tvgellery"
        android:layout_marginStart="10dp"
        android:text="@string/notic"
        android:textColor="#048037"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/yvpay"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/tvgellery"
        android:background="#BBDEFB"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/pay"
        android:textSize="20sp"
        android:textColor="#0D47A1"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/tvabout"
        android:layout_width="170dp"
        android:layout_height="80dp"
        android:background="#FFF9C4"
        android:layout_below="@+id/tvnotic"
        android:layout_toEndOf="@+id/tvgellery"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/about"
        android:textColor="#FF3D00"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tvyellow"
        android:layout_centerInParent="true"
        android:layout_marginStart="98dp"
        android:layout_marginTop="22dp"
        android:layout_toEndOf="@+id/tvgellery"
        android:src="@drawable/notic_pic"
        />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tvyellow"
        android:layout_centerInParent="true"
        android:layout_marginStart="-71dp"
        android:layout_marginTop="112dp"
        android:layout_toEndOf="@+id/tvgellery"
        android:src="@drawable/baseline_qr_code_2_24"
        />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/tvyellow"
        android:layout_centerInParent="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="111dp"
        android:layout_toEndOf="@+id/tvgellery"
        android:src="@drawable/about_pic" />


</RelativeLayout>